--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,3 +19,5 @@ php_value upload_max_filesize 16M
 Header add Access-Control-Allow-Headers "origin, x-requested-with, content-type"
 Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
 Header edit Set-Cookie ^(.*)$  $1;SameSite=Lax;Secure;HttpOnly
+
+Header always set X-Content-Type-Options nosniff
