--- a/public/.htaccess
+++ b/public/.htaccess
@@ -21,3 +21,4 @@ Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
 Header edit Set-Cookie ^(.*)$  $1;SameSite=Lax;Secure;HttpOnly
 
 Header always set X-Content-Type-Options nosniff
+Header always set X-Frame-Options DENY
