--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
 .idea/
+.vscode/
+
+db-dump/
+demos/
 secret/
 sessions/
 vendor/
-secret/client_secret.json
-secret/credentials.json
-secret/database.json
-secret/discord.json
-secret/steam_api_key.json
-secret/client_secret.json
-secret/credentials.json
-secret/database.json
-secret/discord.json
-secret/steam_api_key.json
+
 debug.txt
+demo_list
+
