--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
     "require": {
-        "tedivm/stash": "^0.12.3",
-        "google/apiclient": "1.0.*@beta"
+        "tedivm/stash": "^0.12.3"
     }
 }
