Refactor WR webhook notification * Send less data * Simplify config

--- a/.config.example.json
+++ b/.config.example.json
@@ -5,8 +5,7 @@
     "database_user": "board",
     "database_pass": "board",
     "database_name": "iverborg_leaderboard",
-    "discord_webhook_id": "",
-    "discord_webhook_token": "",
+    "discord_webhook_wr": "",
     "discord_webhook_mdp": "",
     "steam_api_key": ""
 }
