Implement better autorender API This replaces the disabled autorender API client which made a request to the autorender site *every time* we want to check if there is a video. However, the requested resource never changes once it exists. We can optimize the API since we control both ends.
Here is an example request with cURL:
curl -X POST https://board.portal2.local/api-v3/set-autorender \
    -H "Authorization: Bearer $BOARD_API_TOKEN"  \
    -H "Content-type: application/json" \
    -d '{"changelog_id": 254463, "autorender_id": "CbF-gqTFDR0"}'

--- a/.config.example.json
+++ b/.config.example.json
@@ -7,5 +7,6 @@
     "database_name": "iverborg_leaderboard",
     "discord_webhook_wr": "",
     "discord_webhook_mdp": "",
-    "steam_api_key": ""
+    "steam_api_key": "",
+    "autorender_api_token": ""
 }
