Enable networks Sharing the network between Docker containers is useful when testing multiple development environments e.g. autorender.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,9 @@ services:
       - "127.0.0.1:${HTTPS_PORT}:443"
     links:
       - database:database
+    networks:
+      - default
+      - board-net
     volumes:
       - ./classes:/var/www/html/classes:rw
       - ./public:/var/www/html/public:rw
@@ -48,3 +51,6 @@ services:
       - ./docker/initdb:/docker-entrypoint-initdb.d
       - ./docker/volumes/mysql:/var/lib/mysql
       - ./docker/volumes/backups:/backups
+networks:
+    board-net:
+      name: board-net
