--- a/docker/apache/board.portal2.local.conf
+++ b/docker/apache/board.portal2.local.conf
@@ -1,6 +1,9 @@
 <VirtualHost *:80>
     ServerName board.portal2.local
-    Redirect permanent / https://board.portal2.local/
+
+    RewriteEngine On
+    RewriteCond %{HTTPS} off
+    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 </VirtualHost>
 
 <VirtualHost *:443>
