--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,4 @@
+.github/
 .git/
 data/
 docker/
@@ -13,6 +14,7 @@ docker-compose.prod.yml
 docker-compose.yml
 Dockerfile
 README.md
+setup
 
 # from .gitignore
 
