--- a/old-docker-compose.yml
+++ b/old-docker-compose.yml
@@ -4,12 +4,14 @@ services:
       context: .
       args:
         SERVER_NAME: board
+        APT_PACKAGES: ${APT_PACKAGES}
     container_name: "${PROJECT_NAME}-server"
     restart: always
     stdin_open: true
     tty: true
     ports:
       - "${HTTP_PORT}:80"
+      - "${HTTPS_PORT}:443"
     links:
       - database:database
     networks:
