--- a/public/.htaccess
+++ b/public/.htaccess
@@ -15,6 +15,7 @@ RewriteRule ^.*$ ./index.php
 php_value upload_max_filesize 16M
 Header add Access-Control-Allow-Headers "origin, x-requested-with, content-type"
 Header add Access-Control-Allow-Methods "PUT, GET, POST, DELETE, OPTIONS"
+Header add Access-Control-Allow-Origin "*"
 Header edit Set-Cookie ^(.*)$  $1;SameSite=Lax;Secure;HttpOnly
 
 Header always set X-Content-Type-Options nosniff
