Fix Docker network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,9 @@ services:
       - ./docker/initdb:/docker-entrypoint-initdb.d
       - ./docker/volumes/mysql:/var/lib/mysql
       - ./docker/volumes/backups:/backups
+    networks:
+      - default
+      - board-net
 networks:
     board-net:
       name: board-net
