Improve mdp integration Temporarily add latest mdp binary again without sanitizer. Commit: a78876d07e88bcf88736545a53fc57a46b06dec2 CC=clang-14 CFLAGS=-Wall -Werror LDFLAGS=-lm
We really want this to be fetched when building the Docker image but
this is currently blocked by p2sr/mdp#13

Added endpoint for admins to run mdp again on any demo.
Example: https://board.portal2.local/runMdp?id=254484
This also allows unit testing mdp execution on the server.

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,7 +3,6 @@
 data/
 docker/
 migrations/
-util/
 
 .config.example.json
 .dockerignore
@@ -19,6 +18,7 @@ setup
 # from .gitignore
 
 .idea/
+.vim/
 .vscode/
 
 db-dump/
